Fix z-index graphical issue

--- a/src/styles/safari.less
+++ b/src/styles/safari.less
@@ -26,7 +26,7 @@
 #sprite {
   height: 56px;
   width: 56px;
-  z-index: 1;
+  z-index: 2;
   background-image: url('../assets/images/safari/player.png');
   background-size: 400% 400%;
 
@@ -238,4 +238,5 @@
     height: 32px;
     background-size: 100% 100%;
     image-rendering: pixelated;
+    z-index: 1;
 }
